fix: spacing and font sizes (#356)

--- a/src/library-authoring/list-libraries/index.scss
+++ b/src/library-authoring/list-libraries/index.scss
@@ -1,6 +1,5 @@
 .library-title {
-  .pgn__card-header-content {
-    margin-top: 10px;
-    margin-bottom: 10px;
+  .pgn__card-section-title {
+    font-size: 22px;
   }
 }
